--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "api-dioshopping",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts",
+    "build": "tsc",
+    "start": "node ./dist/server.js",
+    "dev": "ts-node-dev ./src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/uuid": "^8.3.1",
     "ts-node-dev": "^1.1.8",
@@ -16,9 +19,17 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "sqlite3": "^5.0.2",
-    "typeorm": "^0.2.34",
+    "typeorm": "^0.2.41",
     "uuid": "^8.3.2"
+  },
+  "author": "nathyts",
+  "contributors": [
+    "Luis Carlos Didi (https://github.com/didifive)"
+  ],
+  "engines": {
+    "npm": "8.3.0",
+    "node": "14.18.0"
   }
 }
